<resources>
    <string name="app_name">Notes</string>
    <string name="search_note">Search Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add_icon">+</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_note">Add Note</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="please_wait">Please Wait …</string>
    <string name="login">Login</string>
    <string name="not_register">Didn\'t Register? Register</string>
    <string name="register">Register</string>
    <string name="already_register">Already Registered? Login</string>
    <string name="logout">Logout</string>
    <string name="welcome_message">WELCOME \n To \n Notes !!</string>
    <string name="remember_me">Remember Me</string>
    <string name="request_permissions">Request Permissions</string>
</resources>